syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.requests.stats";
option java_multiple_files = true;

package requests;

import "defaults/period.proto";
import "requests/stats-service/report-type.proto";

message FullReportRequest {
    enums.PeriodType period = 1;
    enums.ReportType reportType = 2;
}
