syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.stats";
option java_multiple_files = true;

package responses;

message TopItem {
    string name = 1;
    int32 amount = 2;
}
