syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.stats";
option java_multiple_files = true;

package responses;

import "responses/stats-service/users-mood.proto";

message UsersMoodResponse {
    repeated UsersMood usersMoods = 1;
}
