syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.stats";
option java_multiple_files = true;

package responses;

import "defaults/day-of-week.proto";

message WeeklyReportResponse {
    repeated enums.DayOfWeek listOfDays = 1;
}
